--- a/day01/package.json
+++ b/day01/package.json
@@ -2,7 +2,7 @@
   "name": "day01",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "type": "module",
   "scripts": {
     "build": "tsc",
