--- a/day01/tsconfig.json
+++ b/day01/tsconfig.json
@@ -2,9 +2,10 @@
     "compilerOptions": {
         "module": "NodeNext",
         "moduleResolution": "NodeNext",
-        "target": "ES2020",
+        "target": "ES2016",
         "sourceMap": false,
         "outDir": "dist",
+        "allowImportingTsExtensions": true,
     },
     "include": ["src/**/*"],
 }
